<resources>
    <string name="app_name">MicroP</string>
    <string name="device_output">Device:</string>
    <string name="start_scan">Start Scan</string>
    <string name="find_nucleo">Scan for Nucleo</string>
    <string name="nucleo_found">Nucleo Connected</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="results_found">Results Found:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="device_address">Device MAC Address:</string>
    <string name="mac_address">MAC Address</string>
    <string name="nucleo_address">Nucleo MAC Address:</string>
    <string name="message">Message</string>
    <string name="text_message">Message</string>
    <string name="send">Send</string>
    <string name="upload_button">upload</string>
</resources>
